[package]
name = "sqlite3-nettools"
author = "Chris Moore <git@chrismoore.dev>"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ipnet = "2.7.0"
lazy_static = "1.4.0"
eui48 = "1.1.0"
thiserror = "1.0"
smallstr = "0.3.0"

# main rusqlite project doesn't yet have support for authoring loadable extensions
[dependencies.rusqlite]
package = "rusqlite"
git = "https://github.com/litements/rusqlite/"
branch = "loadable-extensions-release-2"
default-features = false
features = [
    "loadable_extension",
    "vtab",
    "functions",
    "bundled",
    "modern_sqlite",
    "buildtime_bindgen",
]

[build-dependencies]
ureq = "2.5.0"
